[package]
name = "aliri_extra_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rustls-tls = [ "reqwest/rustls-tls" ]
default-tls = [ "reqwest/default-tls" ]
default = [ "reqwest" ]

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }

reqwest = { version = "0.11", optional = true, default-features = false, features = [ "json" ] }
reqwest-middleware = "0.2.0"

thiserror = "1.0"
aliri = "0.6.1"
aliri_reqwest = { version = "0.4.1" }
aliri_tokens = { version = "0.2.0" }
aliri_clock = { version = "0.1.4" }
predicates = { version = "3.0.2", default-features = false }