[package]
name = "aliri_keycloak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rustls-tls = [ "aliri_extra_reqwest/rustls-tls" ]
default-tls = [ "aliri_extra_reqwest/default-tls" ]

[dependencies]
reqwest-middleware = "0.2.0"
aliri_extra_reqwest = { version = "0.1.0", path = "../aliri_extra_reqwest" }
itertools = "0.10.5"

anyhow = "1.0.70"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.2.2", features = ["v4"] }
